--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@ body {
 
 /* Navbar Styles */
 .navbar {
-  background-color: #1a1a2e;
+  background-color: #007BFF; /* Blue color */
   color: #ffffff;
   display: flex;
   justify-content: center;
-  padding: 2px 0; /* Reduced from 3px */
-  width: calc(100% - 16cm);
-  margin: 0 auto;
+  padding: 2px 0;
+  width: calc(100% - 10cm); /* Ensures 5cm margin on both sides */
+  margin: 0 auto; /* Centers the navbar */
 }
 
 .navbar a {
@@ -65,6 +65,7 @@ body {
 .navbar a:hover {
   text-decoration: underline;
 }
+
 
 /* Content Section */
 .content {
