--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@ body {
   display: flex;
   justify-content: center;
   padding: 2px 0;
-  width: calc(100% - 10cm); /* Ensures 5cm margin on both sides */
+  width: calc(100% - 20cm); /* Ensures 10cm margin on both sides */
   margin: 0 auto; /* Centers the navbar */
 }
 
 .navbar a {
   color: #ffffff;
   text-decoration: none;
-  margin: 0 50px;
-  font-weight: bold;
+  margin: 0 20px;
+  font-weight: normal; /* Reduced boldness */
   font-size: 1.1em;
   padding: 0.2cm 0; /* Added padding for better clickability */
 }
@@ -65,6 +65,7 @@ body {
 .navbar a:hover {
   text-decoration: underline;
 }
+
 
 
 /* Content Section */
