--- a/index.html
+++ b/index.html
@@ -104,13 +104,12 @@
 
 /* Profile Photo */
 .profile-photo {
-  float: left;
+  float: left; /* Default behavior for larger screens */
   margin: 0 20px 20px 0;
   width: 250px;
   height: auto;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border: 2px dashed red; /* Debugging border */
+  border-radius: 8px; /* Adds a modern look */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Slight shadow for effect */
 }
 
 
