--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <div class="content">
     <!-- Home Section -->
     <div id="home" class="section active">
-      <img src="pic_new.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
+      <img src="pic_t.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
       <p>Welcome! My name is Vikrant.</p>
       <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
 
@@ -168,74 +168,55 @@
       </div>
     </div>
 
+    <!-- Research Section -->
+    <div id="research" class="section">
+      <h2>Research</h2>
+      <h3>Publications</h3>
+      <p>"Noncustodial parents, instrumental networks, and child support compliance" with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger. <i>Social Science Research</i>, Volume 110, February 2023, 102850</p>
+      <h3>Research in Progress</h3>
+      <ul>
+        <li>Intertemporal Elasticity of Labor Supply for Taxicab drivers: Evidence using a new instrument (USA) (co-authored)</li>
+        <li>Labor Market Consequences of Cycling Program using DiD (Non-USA)</li>
+        <li>Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored)</li>
+        <li>Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored)</li>
+      </ul>
+    </div>
 
-    <!-- Content -->
-    <div class="content">
-      <!-- Home Section -->
-      <div id="home" class="section active">
-        <img src="pic_new.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
-        <p>Welcome! My name is Vikrant.</p>
-        <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
-        <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
+    <!-- Teaching Section -->
+    <div id="teaching" class="section">
+      <h2>Teaching</h2>
+      <h3>Instructor</h3>
+      <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
+      <h3>TA Courses</h3>
+      <p>Graduate Courses:</p>
+      <ul>
+        <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily L. Battaglia</a></li>
+      </ul>
+      <p>Undergraduate Courses:</p>
+      <ul>
+        <li>ECON301 | Intermediate Micro with Calculus | Spring 2023 | <a href="https://www.linkedin.com/in/jennifer-r-reynolds/" target="_blank">Dr. Jennifer Reynolds</a></li>
+        <li>ECON304 | Quantitative Macroeconomic Theory | Fall 2023</li>
+        <li>ECON422 | Econometric Methods and Models | Spring 2023</li>
+      </ul>
+    </div>
 
-        <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
-        <div class="social-links">
-          <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en" target="_blank">Google Scholar</a>
-          <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
-          <a href="https://x.com/Vikrant_V_" target="_blank">Twitter</a>
-        </div>
-      </div>
-      
-      <!-- Research Section -->
-      <div id="research" class="section">
-        <h2>Research</h2>
-        <h3>Publications</h3>
-        <p>"Noncustodial parents, instrumental networks, and child support compliance" with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger. <i>Social Science Research</i>, Volume 110, February 2023, 102850</p>
-        <h3>Research in Progress</h3>
-        <ul>
-          <li>Intertemporal Elasticity of Labor Supply for Taxicab drivers: Evidence using a new instrument (USA) (co-authored)</li>
-          <li>Labor Market Consequences of Cycling Program using DiD (Non-USA)</li>
-          <li>Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored)</li>
-          <li>Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored)</li>
-        </ul>
-      </div>
-
-      <!-- Teaching Section -->
-      <div id="teaching" class="section">
-        <h2>Teaching</h2>
-        <h3>Instructor</h3>
-        <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
-        <h3>TA Courses</h3>
-        <p>Graduate Courses:</p>
-        <ul>
-          <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-          <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily L. Battaglia</a></li>
-        </ul>
-        <p>Undergraduate Courses:</p>
-        <ul>
-          <li>ECON301 | Intermediate Micro with Calculus | Spring 2023 | <a href="https://www.linkedin.com/in/jennifer-r-reynolds/" target="_blank">Dr. Jennifer Reynolds</a></li>
-          <li>ECON304 | Quantitative Macroeconomic Theory | Fall 2023</li>
-          <li>ECON422 | Econometric Methods and Models | Spring 2023</li>
-        </ul>
-      </div>
-
-      <!-- Resources Section -->
-      <div id="resources" class="section">
-        <h2>Resources</h2>
-        <h3>Stata Resources</h3>
-        <ul>
-          <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin</a></li>
-          <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
-        </ul>
-        <h3>LaTeX Resources</h3>
-        <ul>
-          <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
-        </ul>
-        <h3>Data Resources</h3>
-        <ul>
-          <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey</a></li>
-        </ul>
-      </div>
+    <!-- Resources Section -->
+    <div id="resources" class="section">
+      <h2>Resources</h2>
+      <h3>Stata Resources</h3>
+      <ul>
+        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin</a></li>
+        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
+      </ul>
+      <h3>LaTeX Resources</h3>
+      <ul>
+        <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
+      </ul>
+      <h3>Data Resources</h3>
+      <ul>
+        <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey</a></li>
+      </ul>
     </div>
   </div>
 
