--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
   <div class="content">
     <!-- Home Section -->
     <div id="home" class="section active">
-      <img src="pic_t.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
-      <p>Welcome! My name is Vikrant.</p>
+      <img src="pic_new.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
+      <p>Welcome! My name is Vikrant VK.</p>
       <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
 
       <!-- Navbar -->
