--- a/index.html
+++ b/index.html
@@ -3,33 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vikrant V Kamble</title>
-
+  <title>Vikrant Kamble</title>
   <style>
     /* Global Styles */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f9f9f9; /* Soft background color */
-      color: #333; /* Slightly lighter than pure black */
     }
 
-    /* Header and Navbar Container */
+    /* Fixed Header Container */
     .header-container {
       position: fixed;
-      top: 0;
+      top: 2cm;
       left: 0;
       right: 0;
-      background-color: #ffffff; /* Ensures clean white header */
+      background-color: white;
       z-index: 1000;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Softer shadow effect */
-      transition: transform 0.3s ease-in-out;
-    }
-
-    /* Scrolling Header Behavior */
-    .header-container.hide {
-      transform: translateY(-100%);
     }
 
     /* Title Section */
@@ -37,68 +27,60 @@
       text-align: center;
       font-size: 1.8em;
       font-weight: bold;
-      color: #333; /* Dark gray for title */
-      padding: 0.2cm 0;
+      color: #333;
     }
 
     .subtitle-section {
       text-align: center;
       font-size: 1em;
-      color: #555; /* Medium gray for subtitle */
-      padding: 0.1cm 0;
+      color: #777;
+      margin-top: 8px;
+      margin-bottom: 1cm;
     }
 
     /* Navbar Styles */
     .navbar {
-      background-color: #0056b3; /* Darker blue for contrast */
+      background-color: #1a1a2e; /* Updated to bluish black */
       color: #ffffff;
       display: flex;
       justify-content: center;
-      padding: 8px 10px; /* Adjusted padding */
-      max-width: 800px; /* Restrict navbar width */
-      margin: 0 auto; /* Center-align navbar on large screens */
-      border-radius: 5px; /* Rounded corners */
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add subtle shadow */
+      padding: 15px 0;
+      width: calc(100% - 16cm); /* Adjusted for 8cm margins on each side */
+      margin: 0 auto;
     }
 
     .navbar a {
       color: #ffffff;
       text-decoration: none;
-      margin: 0 8px; /* Adjust spacing between links */
-      font-weight: normal;
-      font-size: 1em; /* Slightly smaller for mobile */
-      padding: 4px 8px; /* Increase click area */
+      margin: 0 20px;
+      font-weight: bold;
+      font-size: 1.1em;
     }
 
     .navbar a:hover {
       text-decoration: underline;
-      color: #dfe6f1; /* Lighter hover effect */
     }
 
     /* Content Section */
     .content {
-      padding: 2px;
+      padding: 20px;
       text-align: justify;
-      width: 90%; /* Adjusted width */
-      margin: 4.5cm auto 0 auto; /* Center content and allow space for header */
-      color: #444; /* Medium gray for text */
-      line-height: 1.6; /* Improved readability */
+      width: calc(100% - 16cm); /* Adjusted for 8cm margins on each side */
+      margin: 0 auto;
+      margin-top: calc(2cm + 200px); /* Space for fixed header */
     }
 
     /* Profile Photo */
     .profile-photo {
       display: block;
-      margin: 0 auto 20px auto; /* Center image and add spacing below */
+      margin: 1.5cm auto 20px auto; /* Fixed 1.5cm top margin */
       width: 250px;
       height: auto;
-      border-radius: 8px; /* Adds a modern look */
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Slight shadow for effect */
     }
 
     /* Section Styles */
     .section {
       display: none;
-      margin-top: 0.5cm;
     }
 
     .section.active {
@@ -108,66 +90,74 @@
     /* Social Links */
     .social-links {
       text-align: center;
-      margin-top: 1cm;
+      margin-top: 20px;
     }
 
     .social-links a {
       margin: 0 10px;
       text-decoration: none;
-      color: #2f3e56; /* Dark blue-gray */
+      color: #2F3E56;
       font-weight: bold;
-    }
-
-    .social-links a:hover {
-      color: #0056b3; /* Matches navbar color */
     }
 
     /* Mobile Responsive Design */
     @media (max-width: 768px) {
       .header-container {
-        padding: 0.1cm 0;
+        top: 1cm;
       }
 
       .navbar {
         width: 100%;
-        padding: 4px 0;
       }
 
       .content {
         width: 90%;
-        margin-top: 4.5cm; /* Adjusted for mobile */
-      }
-
-      .navbar a {
-        margin: 0 8px;
-        font-size: 1em;
-        padding: 0.15cm 0;
+        padding: 10px;
+        margin-top: calc(1cm + 200px);
       }
 
       .profile-photo {
-        width: 80%; /* Adjust width for mobile screens */
+        width: 200px;
+        margin-top: 1.5cm;
+      }
+
+      .navbar a {
+        margin: 0 10px;
+        font-size: 1em;
       }
     }
-  </style>  
-  
+  </style>
 </head>
 <body>
+  <!-- Fixed Header Container -->
+  <div class="header-container">
+    <div class="title-section">Vikrant V. Kamble</div>
+    <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
+    <!-- Navbar -->
+    <div class="navbar">
+      <a href="#home" onclick="showSection('home')">Home</a>
+      <a href="#research" onclick="showSection('research')">Research</a>
+      <a href="#teaching" onclick="showSection('teaching')">Teaching</a>
+      <a href="#resources" onclick="showSection('resources')">Resources</a>
+    </div>
+  </div>
+
+  <!-- Content -->
   <div class="content">
     <!-- Home Section -->
     <div id="home" class="section active">
       <img src="pic_new.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
-      <p>Welcome! My name is Vikrant VK.</p>
-      <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
-
-      <!-- Navbar -->
-      <div class="navbar">
-        <a href="#home" onclick="showSection('home')">Home</a>
-        <a href="#research" onclick="showSection('research')">Research</a>
-        <a href="#teaching" onclick="showSection('teaching')">Teaching</a>
-        <a href="#resources" onclick="showSection('resources')">Resources</a>
+      <h1>Welcome! My name is Vikrant.</h1>
+      <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
+      <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
+      <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
+      <div class="social-links">
+        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en" target="_blank">Google Scholar</a>
+        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
+        <a href="https://x.com/Vikrant_V_" target="_blank">Twitter</a>
       </div>
     </div>
-
+    
     <!-- Research Section -->
     <div id="research" class="section">
       <h2>Research</h2>
@@ -191,13 +181,13 @@
       <p>Graduate Courses:</p>
       <ul>
         <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily L. Battaglia</a></li>
+        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
       </ul>
       <p>Undergraduate Courses:</p>
       <ul>
-        <li>ECON301 | Intermediate Micro with Calculus | Spring 2023 | <a href="https://www.linkedin.com/in/jennifer-r-reynolds/" target="_blank">Dr. Jennifer Reynolds</a></li>
-        <li>ECON304 | Quantitative Macroeconomic Theory | Fall 2023</li>
-        <li>ECON422 | Econometric Methods and Models | Spring 2023</li>
+        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
+        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></li>
       </ul>
     </div>
 
@@ -206,8 +196,10 @@
       <h2>Resources</h2>
       <h3>Stata Resources</h3>
       <ul>
-        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin</a></li>
+        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
         <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
+        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
+        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
       </ul>
       <h3>LaTeX Resources</h3>
       <ul>
@@ -215,11 +207,14 @@
       </ul>
       <h3>Data Resources</h3>
       <ul>
-        <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey</a></li>
+        <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
+        <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
+        <li><a href="https://fred.stlouisfed.org/" target="_blank">Federal Reserve Economic Data (FRED)</a></li>
       </ul>
     </div>
   </div>
 
+  <!-- JavaScript for Tab Navigation -->
   <script>
     function showSection(sectionId) {
       const sections = document.querySelectorAll('.section');
