--- a/index.html
+++ b/index.html
@@ -10,102 +10,112 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      scroll-behavior: smooth; /* Smooth scrolling for anchor links */
     }
 
-/* Fixed Header Container */
-.header-container {
-  position: sticky; /* Sticks at the top of the viewport */
-  top: 0; /* Always sticks to the top */
-  left: 0;
-  right: 0;
-  background-color: white;
-  z-index: 1000;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow for better visibility */
-}
+    /* Fixed Header Container */
+    .header-container {
+      position: sticky;
+      top: 0;
+      left: 0;
+      right: 0;
+      background-color: white;
+      z-index: 1000;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
 
-/* Title Section */
-.title-section {
-  text-align: center;
-  font-size: 1.8em;
-  font-weight: bold;
-  color: #333;
-  margin: 10px 0;
-}
+    /* Title Section */
+    .title-section {
+      text-align: center;
+      font-size: 1.8em;
+      font-weight: bold;
+      color: #333;
+    }
 
-.subtitle-section {
-  text-align: center;
-  font-size: 1em;
-  color: #777;
-  margin: 0 0 10px;
-}
+    .subtitle-section {
+      text-align: center;
+      font-size: 1em;
+      color: #777;
+      margin-top: 8px;
+      margin-bottom: 1cm;
+    }
 
-/* Navbar Styles */
-.navbar {
-  background-color: #1a1a2e;
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  padding: 15px 0;
-  width: calc(100% - 16cm); /* Matches content margin on desktop */
-  margin: 0 auto;
-}
+    /* Navbar Styles */
+    .navbar {
+      background-color: #1a1a2e; /* Bluish black color */
+      color: #ffffff;
+      display: flex;
+      justify-content: center;
+      padding: 15px 0;
+    }
 
-.navbar a {
-  color: #ffffff;
-  text-decoration: none;
-  margin: 0 20px;
-  font-weight: bold;
-  font-size: 1.1em;
-}
+    .navbar a {
+      color: #ffffff;
+      text-decoration: none;
+      margin: 0 20px;
+      font-weight: bold;
+      font-size: 1.1em;
+    }
 
-.navbar a:hover {
-  text-decoration: underline;
-}
+    .navbar a:hover {
+      text-decoration: underline;
+    }
 
-/* Content Section */
-.content {
-  padding: 20px;
-  text-align: justify;
-  width: calc(100% - 16cm); /* Maintains consistent margins on both sides */
-  margin: 0 auto;
-  margin-top: 20px; /* Adjusted to avoid overlap with sticky header */
-}
+    /* Content Section */
+    .content {
+      padding: 20px;
+      text-align: justify;
+      width: 90%;
+      margin: 0 auto;
+      margin-top: 150px; /* Space for fixed header */
+    }
 
-/* Profile Photo */
-.profile-photo {
-  display: block;
-  margin: 1.5cm auto 20px auto;
-  width: 450px;
-  height: auto;
-}
+    /* Profile Photo */
+    .profile-photo {
+      display: block;
+      margin: 20px auto;
+      width: 300px;
+      height: auto;
+    }
 
-/* Mobile Responsive Design */
-@media (max-width: 768px) {
-  .header-container {
-    top: 0; /* Sticks to the top of the mobile viewport */
-  }
+    /* Section Styles */
+    section {
+      margin-bottom: 40px;
+    }
 
-  .navbar {
-    width: calc(100% - 4cm); /* Adjusted for mobile with smaller margins */
-  }
+    /* Social Links */
+    .social-links {
+      text-align: center;
+      margin-top: 20px;
+    }
 
-  .content {
-    width: calc(100% - 4cm); /* Matches navbar margins */
-    margin-top: 20px; /* Space below the sticky header */
-  }
+    .social-links a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #2F3E56;
+      font-weight: bold;
+    }
 
-  .profile-photo {
-    width: 100%; /* Adjusts photo size to be responsive */
-    max-width: 250px; /* Limits the max size for small screens */
-    margin-top: 1.5cm;
-  }
+    /* Mobile Responsive Design */
+    @media (max-width: 768px) {
+      .title-section {
+        font-size: 1.5em;
+      }
 
-  .navbar a {
-    margin: 0 10px; /* Reduces spacing between links */
-    font-size: 1em; /* Slightly smaller font for smaller screens */
-  }
-}
+      .navbar a {
+        margin: 0 10px;
+        font-size: 1em;
+      }
 
+      .content {
+        width: 95%;
+        padding: 10px;
+      }
+
+      .profile-photo {
+        width: 200px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -115,31 +125,29 @@
     <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
     <!-- Navbar -->
     <div class="navbar">
-      <a href="#home" onclick="showSection('home')">Home</a>
-      <a href="#research" onclick="showSection('research')">Research</a>
-      <a href="#teaching" onclick="showSection('teaching')">Teaching</a>
-      <a href="#resources" onclick="showSection('resources')">Resources</a>
+      <a href="#home">Home</a>
+      <a href="#research">Research</a>
+      <a href="#teaching">Teaching</a>
+      <a href="#resources">Resources</a>
     </div>
   </div>
 
   <!-- Content -->
   <div class="content">
     <!-- Home Section -->
-    <div id="home" class="section active">
+    <section id="home">
       <img src="pic_new.jpg" alt="Profile photo of Vikrant Kamble" class="profile-photo">
       <h1>Welcome! My name is Vikrant.</h1>
       <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
-      <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
-      <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
       <div class="social-links">
         <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en" target="_blank">Google Scholar</a>
         <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
         <a href="https://x.com/Vikrant_V_" target="_blank">Twitter</a>
       </div>
-    </div>
-    
+    </section>
+
     <!-- Research Section -->
-    <div id="research" class="section">
+    <section id="research">
       <h2>Research</h2>
       <h3>Publications</h3>
       <p>"Noncustodial parents, instrumental networks, and child support compliance" with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger. <i>Social Science Research</i>, Volume 110, February 2023, 102850</p>
@@ -150,57 +158,23 @@
         <li>Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored)</li>
         <li>Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored)</li>
       </ul>
-    </div>
+    </section>
 
     <!-- Teaching Section -->
-    <div id="teaching" class="section">
+    <section id="teaching">
       <h2>Teaching</h2>
       <h3>Instructor</h3>
       <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
-      <h3>TA Courses</h3>
-      <p>Graduate Courses:</p>
-      <ul>
-        <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
-      </ul>
-      <p>Undergraduate Courses:</p>
-      <ul>
-        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
-        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></li>
-      </ul>
-    </div>
+    </section>
 
     <!-- Resources Section -->
-    <div id="resources" class="section">
+    <section id="resources">
       <h2>Resources</h2>
-      <h3>Stata Resources</h3>
-      <ul>
-        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
-        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
-        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
-        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
-      </ul>
-      <h3>LaTeX Resources</h3>
-      <ul>
-        <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
-      </ul>
       <h3>Data Resources</h3>
       <ul>
-        <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
-        <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
         <li><a href="https://fred.stlouisfed.org/" target="_blank">Federal Reserve Economic Data (FRED)</a></li>
       </ul>
-    </div>
+    </section>
   </div>
-
-  <!-- JavaScript for Tab Navigation -->
-  <script>
-    function showSection(sectionId) {
-      const sections = document.querySelectorAll('.section');
-      sections.forEach(section => section.classList.remove('active'));
-      document.getElementById(sectionId).classList.add('active');
-    }
-  </script>
 </body>
 </html>
