--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      scroll-behavior: smooth; /* Smooth scrolling for anchor links */
     }
 
     /* Fixed Header Container */
     .header-container {
-      position: sticky;
-      top: 0;
+      position: fixed;
+      top: 2cm;
       left: 0;
       right: 0;
       background-color: white;
       z-index: 1000;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     /* Title Section */
@@ -42,11 +40,13 @@
 
     /* Navbar Styles */
     .navbar {
-      background-color: #1a1a2e; /* Bluish black color */
+      background-color: #1a1a2e; /* Updated to bluish black */
       color: #ffffff;
       display: flex;
       justify-content: center;
       padding: 15px 0;
+      width: calc(100% - 16cm); /* Adjusted for 8cm margins on each side */
+      margin: 0 auto;
     }
 
     .navbar a {
@@ -65,22 +65,26 @@
     .content {
       padding: 20px;
       text-align: justify;
-      width: 90%;
+      width: calc(100% - 16cm); /* Adjusted for 8cm margins on each side */
       margin: 0 auto;
-      margin-top: 150px; /* Space for fixed header */
+      margin-top: calc(2cm + 200px); /* Space for fixed header */
     }
 
     /* Profile Photo */
     .profile-photo {
       display: block;
-      margin: 20px auto;
-      width: 300px;
+      margin: 1.5cm auto 20px auto; /* Fixed 1.5cm top margin */
+      width: 250px;
       height: auto;
     }
 
     /* Section Styles */
-    section {
-      margin-bottom: 40px;
+    .section {
+      display: none;
+    }
+
+    .section.active {
+      display: block;
     }
 
     /* Social Links */
@@ -98,22 +102,28 @@
 
     /* Mobile Responsive Design */
     @media (max-width: 768px) {
-      .title-section {
-        font-size: 1.5em;
+      .header-container {
+        top: 1cm;
+      }
+
+      .navbar {
+        width: 100%;
+      }
+
+      .content {
+        width: 90%;
+        padding: 10px;
+        margin-top: calc(1cm + 200px);
+      }
+
+      .profile-photo {
+        width: 200px;
+        margin-top: 1.5cm;
       }
 
       .navbar a {
         margin: 0 10px;
         font-size: 1em;
-      }
-
-      .content {
-        width: 95%;
-        padding: 10px;
-      }
-
-      .profile-photo {
-        width: 200px;
       }
     }
   </style>
@@ -125,29 +135,31 @@
     <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
     <!-- Navbar -->
     <div class="navbar">
-      <a href="#home">Home</a>
-      <a href="#research">Research</a>
-      <a href="#teaching">Teaching</a>
-      <a href="#resources">Resources</a>
+      <a href="#home" onclick="showSection('home')">Home</a>
+      <a href="#research" onclick="showSection('research')">Research</a>
+      <a href="#teaching" onclick="showSection('teaching')">Teaching</a>
+      <a href="#resources" onclick="showSection('resources')">Resources</a>
     </div>
   </div>
 
   <!-- Content -->
   <div class="content">
     <!-- Home Section -->
-    <section id="home">
-      <img src="pic_new.jpg" alt="Profile photo of Vikrant Kamble" class="profile-photo">
+    <div id="home" class="section active">
+      <img src="pic1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
       <h1>Welcome! My name is Vikrant.</h1>
       <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
+      <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
+      <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
       <div class="social-links">
         <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en" target="_blank">Google Scholar</a>
         <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
         <a href="https://x.com/Vikrant_V_" target="_blank">Twitter</a>
       </div>
-    </section>
-
+    </div>
+    
     <!-- Research Section -->
-    <section id="research">
+    <div id="research" class="section">
       <h2>Research</h2>
       <h3>Publications</h3>
       <p>"Noncustodial parents, instrumental networks, and child support compliance" with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger. <i>Social Science Research</i>, Volume 110, February 2023, 102850</p>
@@ -158,23 +170,57 @@
         <li>Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored)</li>
         <li>Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored)</li>
       </ul>
-    </section>
+    </div>
 
     <!-- Teaching Section -->
-    <section id="teaching">
+    <div id="teaching" class="section">
       <h2>Teaching</h2>
       <h3>Instructor</h3>
       <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
-    </section>
+      <h3>TA Courses</h3>
+      <p>Graduate Courses:</p>
+      <ul>
+        <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
+      </ul>
+      <p>Undergraduate Courses:</p>
+      <ul>
+        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
+        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></li>
+      </ul>
+    </div>
 
     <!-- Resources Section -->
-    <section id="resources">
+    <div id="resources" class="section">
       <h2>Resources</h2>
+      <h3>Stata Resources</h3>
+      <ul>
+        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
+        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
+        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
+        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
+      </ul>
+      <h3>LaTeX Resources</h3>
+      <ul>
+        <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
+      </ul>
       <h3>Data Resources</h3>
       <ul>
+        <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
+        <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
         <li><a href="https://fred.stlouisfed.org/" target="_blank">Federal Reserve Economic Data (FRED)</a></li>
       </ul>
-    </section>
+    </div>
   </div>
+
+  <!-- JavaScript for Tab Navigation -->
+  <script>
+    function showSection(sectionId) {
+      const sections = document.querySelectorAll('.section');
+      sections.forEach(section => section.classList.remove('active'));
+      document.getElementById(sectionId).classList.add('active');
+    }
+  </script>
 </body>
 </html>
